# Course_work_DB

./: .gitignore  README.md  config.py  database.ini  main.py  pyproject.toml  queries.sql
api_classes/: abstract_api.py  hh_cls.py
db_classes/: db_creator.py  db_manager.py
