[tool.poetry]
name = "course-work-db"
version = "0.1.0"
description = ""
authors = ["EroshVK <635753051vika@gmai.com>"]
readme = "README.md"
packages = [{include = "course_work_db"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
psycopg2 = "^2.9.6"
prettytable = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
